add report Orders by currency pairs

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -246,6 +246,7 @@ wallets.totalInputAmount=Total input amount
 wallets.totalOutputAmount=Total output amount
 wallets.downloadInputOutput=Download input-output
 wallets.downloadOrders=Download orders
+wallets.downloadOrdersByCurrencyPairs=Download orders by currency pairs
 orders=buy orders
 orders.accept=Accept
 orders.amountbuy=sum
