--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -486,6 +486,7 @@ wallets.totalInputAmount=Итого ввели
 wallets.totalOutputAmount=Итого вывели
 wallets.downloadInputOutput=Выгрузить ввод-вывод
 wallets.downloadOrders=Выгрузить ордера
+wallets.downloadOrdersByCurrencyPairs=Выгрузить ордера по валютным парам
 orders.volume=Объем
 chart.candle=Свечи
 chart.area=Линия
