--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -932,6 +932,7 @@ admin.checkLanguage= Please, check users language settings
 admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
 wallets.downloadOrders=Download orders
+wallets.downloadOrdersByCurrencyPairs=Download orders by currency pairs
 admin.accessRights=Access rights
 merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
 
