--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -724,6 +724,7 @@ admin.checkLanguage= Please, check users language settings
 admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
 wallets.downloadOrders=Download orders
+wallets.downloadOrdersByCurrencyPairs=Download orders by currency pairs
 admin.accessRights=Access rights
 adminAuthority.PROCESS_WITHDRAW=Accept or decline withdraw requests
 adminAuthority.PROCESS_INVOICE=Accept refill requests
