fix actual sum changing dialog

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1103,3 +1103,6 @@ admin.userCurrencyPermissionsRefill=For refill operations
 admin.userCurrencyPermissionsWithdraw=For withdraw operations
 admin.invoice.new=On review
 admin.invoice.accepted=Accepted
+admin.invoice.initialAmount=Initial amount of payment
+admin.invoice.actualAmount=Actual amount of payment
+admin.invoice.changeAmount=Change
