--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -904,3 +904,6 @@ admin.userCurrencyPermissionsRefill=Для операций пополнения
 admin.userCurrencyPermissionsWithdraw=Для операций вывода средств
 admin.invoice.new=На рассмотрении
 admin.invoice.accepted=Принятые
+admin.invoice.initialAmount=Заявленная сумма платежа
+admin.invoice.actualAmount=Фактическая сумма платежа
+admin.invoice.changeAmount=Изменить
