add minimal commission

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -172,10 +172,10 @@ merchants.invalidSum=المبلغ المطلوب للدفع غير صحيح.
 merchants.limitExceed= تم تجاوز الحد. يرجى المحاولة مرة أخرى في وقت لاحق.
 merchants.meansOfPayment=طرق الدفع
 merchants.merchants=التجار
-merchants.modalInputCommission=Комиссия биржи составит : __المبلغ __العملة (__النسبة)
+merchants.modalInputCommission=Комиссия биржи составит : __المبلغ __العملة __النسبة
 merchants.modalInputFinalSum= مجموع المبلغ المستحق للدفع: - المبلغ - العملة
 merchants.modalInputHeader= قمت بإدخال -  العملة -  مبلغ عن طريق نظام الدفع -  التاجر
-merchants.modalOutputCommission=لجنة البورصة تتكون من : - المبلغ – العملة( - النسبة)
+merchants.modalOutputCommission=لجنة البورصة تتكون من : - المبلغ – العملة - النسبة
 merchants.modalOutputFinalSum=المبلغ الجملي للادخال:- المبلغ – العملة
 merchants.modalOutputHeader=لقد ادخلتم – المبلغ – العملة عن طريق نظام الدفع - التاجر
 merchants.modalOutputWallet=ادخل رقم المحفظة :
@@ -1106,3 +1106,4 @@ admin.invoice.accepted=Accepted
 admin.invoice.initialAmount=Initial amount of payment
 admin.invoice.actualAmount=Actual amount of payment
 admin.invoice.changeAmount=Change
+admin.merchantsCommissions.minFixed=Minimal output commission фьщгте
