--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -361,7 +361,7 @@ order.valuerange = 该值应在范围：0.000000001 - 10,000
 wallets.amount = 支付的数量
 merchants.WithdrawRequestDecline = 申明推出了
 admin.listOfUsers = 会员列表
-merchants.modalOutputCommission = 交易委员会将是 : __amount __currency (__percent)
+merchants.modalOutputCommission = 交易委员会将是 : __amount __currency __percent
 merchants.currencyforoutput = 货币总结
 orders.for = 为了
 merchants.promptWithdrawRequestDecline = 你确定你要拒绝的应用程序？
@@ -764,7 +764,7 @@ operationtype.USER_TRANSFER=USER TRANSFER
 mywallets.transfer=Transfer
 wallets.transferTitle=Transfer of costs
 wallets.transferCurrency=Currency for transfer
-wallets.modalTransferCommission=Exchange Fee will be : __amount __currency (__percent)
+wallets.modalTransferCommission=Exchange Fee will be : __amount __currency __percent
 wallets.modalTransferFinalSum=Amount to be transferred : __amount __currency
 wallets.modalTransferHeader=You transfer __amount __currency
 transfer.nickname=Enter nickname of user to transfer costs: 
@@ -896,3 +896,4 @@ admin.invoice.accepted=Accepted
 admin.invoice.initialAmount=Initial amount of payment
 admin.invoice.actualAmount=Actual amount of payment
 admin.invoice.changeAmount=Change
+admin.merchantsCommissions.minFixed=Minimal output commission amount
