--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -168,10 +168,10 @@ merchants.invalidSum=invalid sum.
 merchants.limitExceed=limit was exceeded. Please try again.
 merchants.meansOfPayment=Payment method
 merchants.merchants=merchants
-merchants.modalInputCommission=Stock exchange commission: __amount __currency (__percent)
+merchants.modalInputCommission=Stock exchange commission: __amount __currency __percent
 merchants.modalInputFinalSum=Total amount to be paid : __amount __currency
 merchants.modalInputHeader=You use a payment system __merchant for inputting __amount __currency
-merchants.modalOutputCommission=Exchange Fee will be : __amount __currency (__percent)
+merchants.modalOutputCommission=Exchange Fee will be : __amount __currency __percent
 merchants.modalOutputFinalSum=Amount to be enrolled : __amount __currency
 merchants.modalOutputHeader=You withdraw __amount __currency through the payment system __merchant
 merchants.modalOutputWallet=Enter your wallet number :
@@ -818,3 +818,4 @@ admin.invoice.accepted=Accepted
 admin.invoice.initialAmount=Initial amount of payment
 admin.invoice.actualAmount=Actual amount of payment
 admin.invoice.changeAmount=Change
+admin.merchantsCommissions.minFixed=Minimal output commission amount
