--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -170,10 +170,10 @@ merchants.invalidSum=Некорректная сумма платежа.
 merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
 merchants.meansOfPayment=Способ оплаты
 merchants.merchants=Мерчанты
-merchants.modalInputCommission=Комиссия биржи составит : __amount __currency (__percent)
+merchants.modalInputCommission=Комиссия биржи составит : __amount __currency __percent
 merchants.modalInputFinalSum=Итого сумма к оплате : __amount __currency
 merchants.modalInputHeader=Вы вводите __amount __currency через платежную систему __merchant
-merchants.modalOutputCommission=Комиссия биржи составит : __amount __currency (__percent)
+merchants.modalOutputCommission=Комиссия биржи составит : __amount __currency __percent
 merchants.modalOutputFinalSum=Итого сумма к выводу : __amount __currency
 merchants.modalOutputHeader=Вы выводите __amount __currency через платежную систему __merchant
 merchants.modalOutputWallet=Введите номер кошелька :
@@ -907,3 +907,4 @@ admin.invoice.accepted=Принятые
 admin.invoice.initialAmount=Заявленная сумма платежа
 admin.invoice.actualAmount=Фактическая сумма платежа
 admin.invoice.changeAmount=Изменить
+admin.merchantsCommissions.minFixed=Минимальная сумма комиссии на вывод
