--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -896,3 +896,6 @@ admin.invoice.accepted=Accepted
 admin.invoice.initialAmount=Initial amount of payment
 admin.invoice.actualAmount=Actual amount of payment
 admin.invoice.changeAmount=Change
+wallets.downloadInputOutputReport=Download input-output summary
+userwallets.currencies=Currencies
+userwallets.direction=Direction
