--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -907,3 +907,6 @@ admin.invoice.accepted=Принятые
 admin.invoice.initialAmount=Заявленная сумма платежа
 admin.invoice.actualAmount=Фактическая сумма платежа
 admin.invoice.changeAmount=Изменить
+wallets.downloadInputOutputReport=Выгрузить свод ввода-вывода
+userwallets.currencies=Валюты
+userwallets.direction=Направление
