--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -650,3 +650,6 @@ admin.userLanguage = The user's preferred language
 admin.userCurrencyPermissions=Operation permissions
 admin.userCurrencyPermissionsRefill=For refill operations
 admin.userCurrencyPermissionsWithdraw=For withdraw operations
+wallets.downloadInputOutputReport=Download input-output summary
+userwallets.currencies=Currencies
+userwallets.direction=Direction
