add candle table page

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -930,3 +930,6 @@ admin.merchantsCommissions.minFixed=Minimal output commission amount
 wallets.downloadInputOutputReport=Download input-output summary
 userwallets.currencies=Currencies
 userwallets.direction=Direction
+admin.candleTable.title=Trade analysis
+admin.candleTable.startPeriod=Start of period
+admin.candleTable.endPeriod=End of period
