--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -913,3 +913,6 @@ admin.merchantsCommissions.minFixed=Минимальная сумма комис
 wallets.downloadInputOutputReport=Выгрузить свод ввода-вывода
 userwallets.currencies=Валюты
 userwallets.direction=Направление
+admin.candleTable.title=Анализ торгов
+admin.candleTable.startPeriod=Начало периода
+admin.candleTable.endPeriod=Конец периода
