--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -916,3 +916,4 @@ userwallets.direction=Направление
 admin.candleTable.title=Анализ торгов
 admin.candleTable.startPeriod=Начало периода
 admin.candleTable.endPeriod=Конец периода
+admin.invoice.computeCommission=Пересчитать комиссию
