accept invoice - corrections

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -774,7 +774,7 @@ admin.unblockAllOutput=Разблокировать весь вывод
 transactionsourcetype.USER_TRANSFER=ПОЛЬЗОВАТЕЛЬ
 operationtype.USER_TRANSFER=ПЕРЕВОД
 mywallets.transfer=Перевести
-wallets.transferTitle=Перевод средств
+wallets.transferTitle=Перевод средств другому пользователю
 wallets.transferCurrency=Валюта к переводу
 wallets.modalTransferCommission=Комиссия биржи составит : __amount __currency (__percent)
 wallets.modalTransferFinalSum=Итого сумма к переводу : __amount __currency
@@ -917,3 +917,8 @@ admin.candleTable.title=Анализ торгов
 admin.candleTable.startPeriod=Начало периода
 admin.candleTable.endPeriod=Конец периода
 admin.invoice.computeCommission=Пересчитать комиссию
+transfer.warning=ВНИМАНИЕ!<br/>Это функция перевода средств ДРУГОМУ пользователю ВНУТРИ биржи!<br/>Перевод не может быть отменён!<br/>\
+Мы не несем ответственность и не отменяем перевод!
+input.warning.BTC=Адрес действует для ОДНОГО пополнения. Чтбы пополнить еще раз, создайте новую заявку!
+input.warning.EDR=Адрес действует для ОДНОГО пополнения. Чтбы пополнить еще раз, создайте новую заявку!
+
