--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -972,7 +972,7 @@ admin.unblockAllOutput=Unblock all output
 transactionsourcetype.USER=USER
 operationtype.USER_TRANSFER=USER TRANSFER
 mywallets.transfer=Transfer
-wallets.transferTitle=Transfer of costs
+wallets.transferTitle=Transfer of costs to other user
 wallets.transferCurrency=Currency for transfer
 wallets.modalTransferCommission=Exchange Fee will be : __amount __currency (__percent)
 wallets.modalTransferFinalSum=Amount to be transferred : __amount __currency
@@ -1116,3 +1116,7 @@ admin.candleTable.title=Trade analysis
 admin.candleTable.startPeriod=Start of period
 admin.candleTable.endPeriod=End of period
 admin.invoice.computeCommission=Re-count commission
+transfer.warning=ATTENTION<br/>This is transfer of costs to OTHER user WITHIN stock exchange<br/>It cannot be cancelled!<br/>Exrates.me administration\
+  is not responsible and cannot revert the transfer.
+input.warning.BTC=The address is valid for a SINGLE input. To refill once more, create new input request.
+input.warning.EDR=The address is valid for a SINGLE input. To refill once more, create new input request.
