--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -908,5 +908,5 @@ admin.candleTable.endPeriod=End of period
 admin.invoice.computeCommission=Re-count commission
 transfer.warning=ATTENTION<br/>This is transfer of costs to OTHER user WITHIN stock exchange<br/>It cannot be cancelled!<br/>Exrates.me administration\
   is not responsible and cannot revert the transfer.
-input.warning.BTC=The address is valid for a SINGLE input. To refill once more, create new input request.
-input.warning.EDR=The address is valid for a SINGLE input. To refill once more, create new input request.
+input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
+input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
