--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -935,5 +935,5 @@ admin.candleTable.startPeriod=Start of period
 admin.candleTable.endPeriod=End of period
 admin.invoice.computeCommission=Re-count commission
 transfer.warning=PERHATIAN!<br/>Ini adalah transfer biaya kepada pengguna DALAM bursa.<br/>Hal ini tidak bisa dibatalkan!<br/>Administrasi Exrates.me tidak bertanggung jawab dan tidak dapat kembali transfer.
-input.warning.BTC=Alamat berlaku untuk mengisi ulang tunggal.Untuk isi ulang sekali lagi, buat permintaan masukan baru.
-input.warning.EDR=Alamat berlaku untuk mengisi ulang tunggal.Untuk isi ulang sekali lagi, buat permintaan masukan baru.
+input.warning.BTC=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap isi ulang, buat permintaan masukan baru.
+input.warning.EDR=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap isi ulang, buat permintaan masukan baru.
