--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -919,6 +919,6 @@ admin.candleTable.endPeriod=Конец периода
 admin.invoice.computeCommission=Пересчитать комиссию
 transfer.warning=ВНИМАНИЕ!<br/>Это функция перевода средств ДРУГОМУ пользователю ВНУТРИ биржи!<br/>Перевод не может быть отменён!<br/>\
 Мы не несем ответственность и не отменяем перевод!
-input.warning.BTC=Адрес действует для ОДНОГО пополнения. Чтбы пополнить еще раз, создайте новую заявку!
-input.warning.EDR=Адрес действует для ОДНОГО пополнения. Чтбы пополнить еще раз, создайте новую заявку!
+input.warning.BTC=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
+input.warning.EDR=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
 
