--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -833,3 +833,4 @@ transfer.warning=ATTENTION<br/>This is transfer of costs to OTHER user WITHIN st
 input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 
+transactionsourcetype.WITHDRAW=WITHDRAW
