--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -922,3 +922,4 @@ transfer.warning=ВНИМАНИЕ!<br/>Это функция перевода с
 input.warning.BTC=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
 input.warning.EDR=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
 
+transactionsourcetype.WITHDRAW=ВЫВОД
