--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -834,3 +834,4 @@ input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, 
 input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 
 transactionsourcetype.WITHDRAW=WITHDRAW
+transactionsourcetype.BTC_INVOICE=BTC_INVOICE
