--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -938,3 +938,4 @@ transfer.warning=PERHATIAN!<br/>Ini adalah transfer biaya kepada pengguna DALAM 
 input.warning.BTC=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap isi ulang, buat permintaan masukan baru.
 input.warning.EDR=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap isi ulang, buat permintaan masukan baru.
 transactionsourcetype.WITHDRAW=PENARIKAN
+transactionsourcetype.BTC_INVOICE=BTC_INVOICE
