--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -923,3 +923,4 @@ input.warning.BTC=Адрес будет действителен для ОДНО
 input.warning.EDR=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
 
 transactionsourcetype.WITHDRAW=ВЫВОД
+transactionsourcetype.BTC_INVOICE=BTC_ИНВОЙС
