User Trnasfer info done

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1120,3 +1120,5 @@ transfer.warning=ATTENTION<br/>This is transfer of costs to OTHER user WITHIN st
   is not responsible and cannot revert the transfer.
 input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
+message.sender=Отправитель
+message.recipient=Получатель
