--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -937,3 +937,5 @@ admin.invoice.computeCommission=Re-count commission
 transfer.warning=PERHATIAN!<br/>Ini adalah transfer biaya kepada pengguna DALAM bursa.<br/>Hal ini tidak bisa dibatalkan!<br/>Administrasi Exrates.me tidak bertanggung jawab dan tidak dapat kembali transfer.
 input.warning.BTC=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap isi ulang, buat permintaan masukan baru.
 input.warning.EDR=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap isi ulang, buat permintaan masukan baru.
+message.sender=Отправитель
+message.recipient=Получатель
