--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -654,3 +654,5 @@ admin.userCurrencyPermissionsWithdraw=For withdraw operations
 wallets.downloadInputOutputReport=Download input-output summary
 userwallets.currencies=Currencies
 userwallets.direction=Direction
+message.sender=Отправитель
+message.recipient=Получатель
