--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -832,4 +832,6 @@ transfer.warning=ATTENTION<br/>This is transfer of costs to OTHER user WITHIN st
   is not responsible and cannot revert the transfer.
 input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
+message.sender=Sender
+message.recipient=Recipient
 
