--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -921,4 +921,6 @@ transfer.warning=ВНИМАНИЕ!<br/>Это функция перевода с
 Мы не несем ответственность и не отменяем перевод!
 input.warning.BTC=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
 input.warning.EDR=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
+message.sender=Отправитель
+message.recipient=Получатель
 
