--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -939,3 +939,4 @@ input.warning.BTC=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap i
 input.warning.EDR=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap isi ulang, buat permintaan masukan baru.
 transactionsourcetype.WITHDRAW=PENARIKAN
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
+timeout.warning.EDR=Mohon tunggu. Alamat untuk isi ulang yang dihasilkan selama 30-50 detik
