PROGRAM-263_NEW_WITHDRAW

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -914,5 +914,14 @@ transactionsourcetype.WITHDRAW=WITHDRAW
 merchant.withdrawAutoParams=Automatic withdrawal parameters
 merchant.withdrawAuto=Auto-withdrawal
 merchant.withdrawAutoDelay=Delay
+merchant.withdrawAutoDelaySecond=second(s)
+merchant.withdrawAutoDelayMinute=minute(s)
+merchant.withdrawAutoDelayHour=hour(s)
 merchant.withdrawAutoThreshold=Threshold for Auto-withdrawal (amount)
 merchant.withdrawAutoThresholdExt=Confirmation needed if amount more than
+merchants.withdrawNotification.WAITING_MANUAL_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
+merchants.withdrawNotification.WAITING_AUTO_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
+merchants.withdrawNotification.WAITING_CONFIRMATION=Your withdrawal request #{0} through system {1} is waiting for confirmation and then will be processed {2}
+merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=Your withdrawal request #{0} through system {1} has been confirmed and will be processed {2}
+merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} through system {1} has been posted {2}
+merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
