--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -852,3 +852,10 @@ merchants.withdrawNotification.WAITING_CONFIRMATION=Your withdrawal request #{0}
 merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=Your withdrawal request #{0} through system {1} has been confirmed and will be processed {2}
 merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} through system {1} has been posted {2}
 merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
+action.button.CONFIRM_BUTTON=confirm
+action.button.REVOKE_BUTTON=revoke
+action.button.ACCEPT_BUTTON=accept
+action.button.DECLINE_BUTTON=decline
+action.button.POST_BUTTON=post
+action.button.TAKE_TO_WORK_BUTTON=take
+action.button.RETURN_FROM_WORK_BUTTON=return
