--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -856,6 +856,19 @@ action.button.CONFIRM_BUTTON=confirm
 action.button.REVOKE_BUTTON=revoke
 action.button.ACCEPT_BUTTON=accept
 action.button.DECLINE_BUTTON=decline
+action.button.DECLINE_HOLDED_BUTTON=decline
 action.button.POST_BUTTON=post
+action.button.POST_HOLDED_BUTTON=post
 action.button.TAKE_TO_WORK_BUTTON=take
 action.button.RETURN_FROM_WORK_BUTTON=return
+
+merchants.withdraw.CREATED_USER=Created
+merchants.withdraw.WAITING_MANUAL_POSTING=On posting
+merchants.withdraw.WAITING_AUTO_POSTING=On posting
+merchants.withdraw.WAITING_CONFIRMED_POSTING=On posting
+merchants.withdraw.WAITING_CONFIRMATION=On confirmation
+merchants.withdraw.IN_WORK_OF_ADMIN=On confirmation
+merchants.withdraw.REVOKED_USER=Revoked
+merchants.withdraw.DECLINED_ADMIN=Declined
+merchants.withdraw.POSTED_MANUAL=Posted
+merchants.withdraw.POSTED_AUTO=Posted
