--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -672,3 +672,5 @@ message.sender=Отправитель
 message.recipient=Получатель
 transactionsourcetype.WITHDRAW=WITHDRAW
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
+admin.withdraw.All=All
+transferInfo.title=Информация о переводе
