--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1140,3 +1140,5 @@ message.recipient=Получатель
 
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 timeout.warning.EDR=Please wait. Address for refill is generated for 30-50 seconds
+admin.withdraw.All=All
+transferInfo.title=Информация о переводе
