--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -957,3 +957,5 @@ message.recipient=Получатель
 
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 timeout.warning.EDR=Mohon tunggu. Alamat untuk isi ulang yang dihasilkan selama 30-50 detik
+admin.withdraw.All=All
+transferInfo.title=Информация о переводе
