--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -912,4 +912,4 @@ input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, 
 input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 transactionsourcetype.WITHDRAW=WITHDRAW
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
-timeout.warning.EDR=Please wait. Address for refill is generated for 30-50 seconds
+timeout.warning.EDR=Please wait. Address for refill is generated for several seconds
