--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -835,4 +835,4 @@ input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, 
 
 transactionsourcetype.WITHDRAW=WITHDRAW
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
-timeout.warning.EDR=Please wait. Address for refill is generated for 30-50 seconds
+timeout.warning.EDR=Please wait. Address for refill is generated for several seconds
