--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -925,4 +925,4 @@ input.warning.EDR=Адрес будет действителен для ОДНО
 transactionsourcetype.WITHDRAW=ВЫВОД
 transactionsourcetype.BTC_INVOICE=BTC_ИНВОЙС
 
-timeout.warning.EDR=Пожалуйста, подождите. Адрес для пополнения генерируется в течение 30-50 секунд
+timeout.warning.EDR=Пожалуйста, подождите. Генерация адреса может занять несколько секунд
