--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -925,5 +925,9 @@ merchants.withdrawNotification.WAITING_CONFIRMATION=Your withdrawal request #{0}
 merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=Your withdrawal request #{0} through system {1} has been confirmed and will be processed {2}
 merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} through system {1} has been posted {2}
 merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
+message.sender=Sender
+message.recipient=Recipient
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 timeout.warning.EDR=Please wait. Address for refill is generated for 30-50 seconds
+admin.withdraw.All=All
+transferInfo.title=Transfer info
