--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -952,10 +952,10 @@ merchants.withdrawNotification.WAITING_CONFIRMATION=Your withdrawal request #{0}
 merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=Your withdrawal request #{0} through system {1} has been confirmed and will be processed {2}
 merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} through system {1} has been posted {2}
 merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
-message.sender=Отправитель
-message.recipient=Получатель
+message.sender=Sender
+message.recipient=Recipient
 
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 timeout.warning.EDR=Mohon tunggu. Alamat untuk isi ulang yang dihasilkan selama 30-50 detik
 admin.withdraw.All=All
-transferInfo.title=Информация о переводе
+transferInfo.title=Transfer info
