new wallet, add % change to graph info, fix tx types

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -102,7 +102,6 @@ dashboard.goOut=Выйти
 dashboard.hello=Добрый день!
 dashboard.highestPrice=Макс. Цена
 dashboard.howItWork=КАК ЭТО РАБОТАЕТ
-dashboard.lastOrder=Последняя сделка:
 dashboard.legalityAndSecurity=Легальность и безопасность
 dashboard.loginText=Логин
 dashboard.lowestPrice=Мин. Цена
@@ -111,9 +110,7 @@ dashboard.news=Новости
 dashboard.ourWeb=EXRATES.ME
 dashboard.passwordText=Пароль
 dashboard.personalArea=Личный кабинет
-dashboard.priceEnd=Цена закрытия:
 dashboard.priceFor=Цена за
-dashboard.priceStart=Цена открытия:
 dashboard.resetPasswordButton=Восстановить пароль
 dashboard.resetPasswordTitle=Форма восстановление пароля
 dashboard.sell=Продать
@@ -126,7 +123,6 @@ dashboard.tradeAPI=Торговое API
 dashboard.tradeByCurrency=Торговля валютой
 dashboard.training=Обучение
 dashboard.updatePasswordTitle=Форма изменения пароля
-dashboard.volume=Объем:
 dashboard.yourBalance=Ваши средства
 dberror.text=К сожалению, операция не может быть выполнена в данный момент. Попробуйте позже
 dberror.title=Ошибка!
@@ -926,3 +922,8 @@ transactionsourcetype.WITHDRAW=ВЫВОД
 transactionsourcetype.BTC_INVOICE=BTC_ИНВОЙС
 
 timeout.warning.EDR=Пожалуйста, подождите. Генерация адреса может занять несколько секунд
+dashboard.percentChange=% change:
+dashboard.priceStart=start:
+dashboard.priceEnd=end:
+dashboard.lastOrder=last:
+dashboard.volume=vol:
