--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -102,7 +102,6 @@ dashboard.goOut=Keluar
 dashboard.hello=Halo!
 dashboard.highestPrice=Harga maksimal
 dashboard.howItWork=CARA KERJANYA
-dashboard.lastOrder=Kesepakatan yang terakhir:
 dashboard.legalityAndSecurity=Legalitas dan keamanan
 dashboard.loginText=Login
 dashboard.lowestPrice=Harga minimal
@@ -111,9 +110,7 @@ dashboard.news=Berita
 dashboard.ourWeb=EXRATES.ME
 dashboard.passwordText=Kata sandi
 dashboard.personalArea= Kabinet pribadi
-dashboard.priceEnd=Harga Penutupan :
 dashboard.priceFor=Harga untuk
-dashboard.priceStart=Harga pembuka :
 dashboard.resetPasswordButton=Memulihkan kata sandi
 dashboard.resetPasswordTitle=Pilihan pemulihan kata sandi
 dashboard.sell=Jual
@@ -126,7 +123,6 @@ dashboard.tradeAPI=Pertukaran API
 dashboard.tradeByCurrency=Perdagangan mata uang
 dashboard.training=Pelatihan
 dashboard.updatePasswordTitle=Pilihan pengantian kata sandi
-dashboard.volume=Volume:
 dashboard.yourBalance=Saldo Anda
 dberror.text=Sayang sekali, operasi tidak dapat dilakukan pada saat ini. Coba lagi nanti
 dberror.title=Kesalahan!
@@ -940,3 +936,8 @@ input.warning.EDR=Alamat berlaku untuk mengisi ulang tunggal.<br/>Untuk setiap i
 transactionsourcetype.WITHDRAW=PENARIKAN
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 timeout.warning.EDR=Mohon tunggu. Alamat untuk isi ulang yang dihasilkan selama beberapa detik
+dashboard.percentChange=% change:
+dashboard.priceStart=start:
+dashboard.priceEnd=end:
+dashboard.lastOrder=last:
+dashboard.volume=vol:
