download transactions history csv

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1142,3 +1142,5 @@ transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 timeout.warning.EDR=Please wait. Address for refill is generated for 30-50 seconds
 admin.withdraw.All=All
 transferInfo.title=Информация о переводе
+admin.user.transactions.downloadHistory=Загрузить историю
+admin.user.transactions.downloadHistory.choosePeriod=Выберите период
