--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -854,3 +854,5 @@ merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} throug
 merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
 admin.withdraw.All=All
 transferInfo.title=Transfer info
+admin.user.transactions.downloadHistory=Загрузить историю
+admin.user.transactions.downloadHistory.choosePeriod=Выберите период
