--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -959,3 +959,5 @@ transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 timeout.warning.EDR=Mohon tunggu. Alamat untuk isi ulang yang dihasilkan selama 30-50 detik
 admin.withdraw.All=All
 transferInfo.title=Информация о переводе
+admin.user.transactions.downloadHistory=Загрузить историю
+admin.user.transactions.downloadHistory.choosePeriod=Выберите период
