--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -674,3 +674,5 @@ transactionsourcetype.WITHDRAW=WITHDRAW
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 admin.withdraw.All=All
 transferInfo.title=Информация о переводе
+admin.user.transactions.downloadHistory=Загрузить историю
+admin.user.transactions.downloadHistory.choosePeriod=Выберите период
