add page for wallet

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -932,3 +932,4 @@ dashboard.priceStart=start:
 dashboard.priceEnd=end:
 dashboard.lastOrder=last:
 dashboard.volume=vol:
+btcWallet.title=Bitcoin Wallet
