--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -857,3 +857,4 @@ merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} throug
 merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
 admin.withdraw.All=All
 transferInfo.title=Transfer info
+btcWallet.title=Bitcoin Wallet
