--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1144,3 +1144,4 @@ dashboard.priceStart=start:
 dashboard.priceEnd=end:
 dashboard.lastOrder=last:
 dashboard.volume=vol:
+btcWallet.title=Bitcoin Wallet
