--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -960,3 +960,4 @@ dashboard.priceStart=start:
 dashboard.priceEnd=end:
 dashboard.lastOrder=last:
 dashboard.volume=vol:
+btcWallet.title=Bitcoin Wallet
