--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -945,3 +945,4 @@ merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} throug
 merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
 admin.withdraw.All=Все
 transferInfo.title=Информация о переводе
+btcWallet.title=Кошелёк Bitcoin
