--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -674,6 +674,5 @@ transactionsourcetype.WITHDRAW=WITHDRAW
 transactionsourcetype.BTC_INVOICE=BTC_INVOICE
 admin.withdraw.All=All
 transferInfo.title=Transfer info
-transferInfo.title=Информация о переводе
-admin.user.transactions.downloadHistory=Загрузить историю
-admin.user.transactions.downloadHistory.choosePeriod=Выберите период
+admin.user.transactions.downloadHistory=Download history
+admin.user.transactions.downloadHistory.choosePeriod=Choose period
