--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1144,6 +1144,5 @@ dashboard.priceStart=start:
 dashboard.priceEnd=end:
 dashboard.lastOrder=last:
 dashboard.volume=vol:
-transferInfo.title=Информация о переводе
-admin.user.transactions.downloadHistory=Загрузить историю
-admin.user.transactions.downloadHistory.choosePeriod=Выберите период
+admin.user.transactions.downloadHistory=Download history
+admin.user.transactions.downloadHistory.choosePeriod=Choose period
