PROGRAM-263_NEW_WITHDRAW

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -875,3 +875,8 @@ merchants.withdraw.POSTED_MANUAL=Posted
 merchants.withdraw.POSTED_AUTO=Posted
 
 withdrawal.statusModificationDate=Date of setting status
+withdrawal.declined.title=Invoice declined
+withdrawal.declined.message=Your invoice id {0} has been declined!
+withdrawal.phrases.decline.1 = Some reason 1
+withdrawal.phrases.decline.2 = Some reason 2
+withdrawal.phrases.decline.3 = Some reason 3
