PROGRAM-263_NEW_WITHDRAW

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -878,7 +878,7 @@ merchants.withdraw.REVOKED_USER=Revoked
 merchants.withdraw.DECLINED_ADMIN=Declined
 merchants.withdraw.POSTED_MANUAL=Posted
 merchants.withdraw.POSTED_AUTO=Posted
-
+admin.withdraw.auto=Auto processing
 withdrawal.statusModificationDate=Date of setting status
 withdrawal.declined.title=Invoice declined
 withdrawal.declined.message=Your invoice id {0} has been declined!
