PROGRAM-263_NEW_WITHDRAW

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -853,8 +853,8 @@ merchants.withdrawNotification.WAITING_MANUAL_POSTING=Your withdrawal request #{
 merchants.withdrawNotification.WAITING_AUTO_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
 merchants.withdrawNotification.WAITING_CONFIRMATION=Your withdrawal request #{0} through system {1} is waiting for confirmation and then will be processed {2}
 merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=Your withdrawal request #{0} through system {1} has been confirmed and will be processed {2}
-merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} through system {1} has been posted {2}
-merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
+merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} has been posted
+merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0}  has been posted
 admin.withdraw.All=All
 transferInfo.title=Transfer info
 action.button.CONFIRM_USER_BUTTON=confirm
@@ -880,8 +880,8 @@ merchants.withdraw.POSTED_MANUAL=Posted
 merchants.withdraw.POSTED_AUTO=Posted
 admin.withdraw.auto=Auto processing
 withdrawal.statusModificationDate=Date of setting status
-withdrawal.declined.title=Invoice declined
-withdrawal.declined.message=Your invoice id {0} has been declined!
+withdrawal.declined.title=Withdrawal is declined
+withdrawal.posted.title=Withdrawal is posted
 withdrawal.phrases.decline.1 = Some reason 1
 withdrawal.phrases.decline.2 = Some reason 2
 withdrawal.phrases.decline.3 = Some reason 3
