add btc wallet page in admin - tx history

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -933,3 +933,14 @@ dashboard.priceEnd=end:
 dashboard.lastOrder=last:
 dashboard.volume=vol:
 btcWallet.title=Bitcoin Wallet
+btcWallet.history.title=Transactions history
+btcWallet.send.title=Send bitcoins
+btcWallet.history.txid=Transaction ID
+btcWallet.address=Address
+btcWallet.history.category=Category
+btcWallet.amount=Amount
+btcWallet.history.fee=Fee
+btcWallet.history.confirmations=Confirmations
+btcWallet.history.time=Time
+btcWallet.balance=Balance: 
+btcWallet.unconfirmedBalance=Unconfirmed balance:
