--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -858,3 +858,14 @@ merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through 
 admin.withdraw.All=All
 transferInfo.title=Transfer info
 btcWallet.title=Bitcoin Wallet
+btcWallet.history.title=Transactions history
+btcWallet.send.title=Send bitcoins
+btcWallet.history.txid=Transaction ID
+btcWallet.address=Address
+btcWallet.history.category=Category
+btcWallet.amount=Amount
+btcWallet.history.fee=Fee
+btcWallet.history.confirmations=Confirmations
+btcWallet.history.time=Time
+btcWallet.balance=Balance: 
+btcWallet.unconfirmedBalance=Unconfirmed balance: 
