--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -946,3 +946,14 @@ merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through 
 admin.withdraw.All=Все
 transferInfo.title=Информация о переводе
 btcWallet.title=Кошелёк Bitcoin
+btcWallet.history.title=История транзакций
+btcWallet.send.title=Отправить биткоины
+btcWallet.history.txid=ID транзакции
+btcWallet.address=Адрес
+btcWallet.history.category=Категория
+btcWallet.amount=Сумма
+btcWallet.history.fee=Комиссия
+btcWallet.history.confirmations=Подтверждения
+btcWallet.history.time=Время
+btcWallet.balance=Баланс: 
+btcWallet.unconfirmedBalance=Неподтверждённый баланс: 
