add btc wallet page in admin - send btc

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -938,9 +938,16 @@ btcWallet.send.title=Send bitcoins
 btcWallet.history.txid=Transaction ID
 btcWallet.address=Address
 btcWallet.history.category=Category
-btcWallet.amount=Amount
-btcWallet.history.fee=Fee
+btcWallet.history.amount=Amount
+btcWallet.history.fee=Fee amount
+btcWallet.amount=Amount, BTC
+btcWallet.fee=Fee, BTC/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
 btcWallet.balance=Balance: 
-btcWallet.unconfirmedBalance=Unconfirmed balance:
+btcWallet.unconfirmedBalance=Unconfirmed balance: 
+btcWallet.password.title=Enter password
+btcWallet.password.prompt=Please enter wallet password:
+btcWallet.payment.dialog.title=Send BTC
+btcWallet.payment.prompt=You are going to pay __amount__ BTC to address __address__
+btcWallet.successResult=Payment succeeded! Transaction ID {0}
