--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -951,9 +951,16 @@ btcWallet.send.title=Отправить биткоины
 btcWallet.history.txid=ID транзакции
 btcWallet.address=Адрес
 btcWallet.history.category=Категория
-btcWallet.amount=Сумма
-btcWallet.history.fee=Комиссия
+btcWallet.history.amount=Сумма
+btcWallet.history.fee=Сумма комиссии
+btcWallet.amount=Сумма, BTC
+btcWallet.fee=Комиссия, BTC/kB
 btcWallet.history.confirmations=Подтверждения
 btcWallet.history.time=Время
 btcWallet.balance=Баланс: 
 btcWallet.unconfirmedBalance=Неподтверждённый баланс: 
+btcWallet.password.title=Ввод пароля
+btcWallet.password.prompt=Пожалуйста, введите пароль кошелька:
+btcWallet.payment.dialog.title=Send BTC
+btcWallet.payment.prompt=Вы собираетесь оплатить __amount__ BTC на адрес __address__
+btcWallet.successResult=Платёж совершён успешно! ID транзакции {0}
