fixes for bitcoin sending

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -961,6 +961,6 @@ btcWallet.balance=Баланс:
 btcWallet.unconfirmedBalance=Неподтверждённый баланс: 
 btcWallet.password.title=Ввод пароля
 btcWallet.password.prompt=Пожалуйста, введите пароль кошелька:
-btcWallet.payment.dialog.title=Send BTC
+btcWallet.payment.dialog.title=Отправить BTC
 btcWallet.payment.prompt=Вы собираетесь оплатить __amount__ BTC на адрес __address__
 btcWallet.successResult=Платёж совершён успешно! ID транзакции {0}
