--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -875,6 +875,7 @@ merchants.withdraw.REVOKED_USER=Revoked
 merchants.withdraw.DECLINED_ADMIN=Declined
 merchants.withdraw.POSTED_MANUAL=Posted
 merchants.withdraw.POSTED_AUTO=Posted
+merchants.withdraw.IN_POSTING=On posting
 admin.withdraw.auto=Auto processing
 withdrawal.statusModificationDate=Date of setting status
 withdrawal.declined.title=Withdrawal is declined
