PROGRAM-263_NEW_WITHDRAW

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -945,3 +945,32 @@ merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} throug
 merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted {2}
 admin.withdraw.All=Все
 transferInfo.title=Информация о переводе
+action.button.CONFIRM_USER_BUTTON=подтвердить
+action.button.CONFIRM_ADMIN_BUTTON=подтвердить
+action.button.REVOKE_BUTTON=отозвать
+action.button.ACCEPT_BUTTON=утвердить
+action.button.DECLINE_BUTTON=отклонить
+action.button.DECLINE_HOLDED_BUTTON=отклонить
+action.button.POST_BUTTON=провести
+action.button.POST_HOLDED_BUTTON=провести
+action.button.TAKE_TO_WORK_BUTTON=в работу
+action.button.RETURN_FROM_WORK_BUTTON=вернуть
+
+merchants.withdraw.CREATED_USER=Создан
+merchants.withdraw.WAITING_MANUAL_POSTING=На проводке
+merchants.withdraw.WAITING_AUTO_POSTING=На проводке
+merchants.withdraw.WAITING_CONFIRMED_POSTING=На проводке
+merchants.withdraw.WAITING_CONFIRMATION=На подтверждении
+merchants.withdraw.IN_WORK_OF_ADMIN=На подтверждении
+merchants.withdraw.REVOKED_USER=Отозван
+merchants.withdraw.DECLINED_ADMIN=Отклонен
+merchants.withdraw.POSTED_MANUAL=Проведен
+merchants.withdraw.POSTED_AUTO=Проведен
+merchants.withdraw.IN_POSTING=На проводке
+admin.withdraw.auto=Авто проведение
+withdrawal.statusModificationDate=Дата статуса
+withdrawal.declined.title=Вывод средств отколнен
+withdrawal.posted.title=Вывод средств проведен
+withdrawal.phrases.decline.1 = Причина 1
+withdrawal.phrases.decline.2 = Причина 2
+withdrawal.phrases.decline.3 = причина 3
