--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -960,3 +960,33 @@ dashboard.priceStart=start:
 dashboard.priceEnd=end:
 dashboard.lastOrder=last:
 dashboard.volume=vol:
+
+action.button.CONFIRM_USER_BUTTON=confirm
+action.button.CONFIRM_ADMIN_BUTTON=confirm
+action.button.REVOKE_BUTTON=revoke
+action.button.ACCEPT_BUTTON=accept
+action.button.DECLINE_BUTTON=decline
+action.button.DECLINE_HOLDED_BUTTON=decline
+action.button.POST_BUTTON=post
+action.button.POST_HOLDED_BUTTON=post
+action.button.TAKE_TO_WORK_BUTTON=take
+action.button.RETURN_FROM_WORK_BUTTON=return
+
+merchants.withdraw.CREATED_USER=Created
+merchants.withdraw.WAITING_MANUAL_POSTING=On posting
+merchants.withdraw.WAITING_AUTO_POSTING=On posting
+merchants.withdraw.WAITING_CONFIRMED_POSTING=On posting
+merchants.withdraw.WAITING_CONFIRMATION=On confirmation
+merchants.withdraw.IN_WORK_OF_ADMIN=On confirmation
+merchants.withdraw.REVOKED_USER=Revoked
+merchants.withdraw.DECLINED_ADMIN=Declined
+merchants.withdraw.POSTED_MANUAL=Posted
+merchants.withdraw.POSTED_AUTO=Posted
+merchants.withdraw.IN_POSTING=On posting
+admin.withdraw.auto=Auto processing
+withdrawal.statusModificationDate=Date of setting status
+withdrawal.declined.title=Withdrawal is declined
+withdrawal.posted.title=Withdrawal is posted
+withdrawal.phrases.decline.1 = Some reason 1
+withdrawal.phrases.decline.2 = Some reason 2
+withdrawal.phrases.decline.3 = Some reason 3
