fix and refactoring Report + service bean + myWallet reserv balance info

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -759,7 +759,7 @@ admin.commissions.operationType=Тип операции
 admin.commissions.value=Значение, %
 admin.stockExchangeCommissions=Комиссии биржи
 admin.merchantsCommissions=Комиссии платёжной системы
-admin.merchantAccess=Доступ к платёжным системам
+admin.merchantAccess=Настройки платежных систем
 admin.toggleBlockPrompt=Вы уверены, что хотите изменить доступ для данной платежной системы?
 merchant.operationNotAvailable=К сожалению, в данный момент операция недоступна
 admin.blockAllPrompt=Вы уверены, что хотите изменить доступ для всех платежных систем?
@@ -935,7 +935,7 @@ merchant.withdrawAutoDelay=Задержка
 merchant.withdrawAutoDelaySecond=сек.
 merchant.withdrawAutoDelayMinute=мин.
 merchant.withdrawAutoDelayHour=час.
-merchant.withdrawAutoThreshold=Порог автовывода (сумма)
+merchant.withdrawAutoThreshold=Подтверждать для сумм больше
 merchant.withdrawAutoThresholdExt=Требуется подтверждение при сумме более
 merchants.withdrawNotification.WAITING_MANUAL_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
 merchants.withdrawNotification.WAITING_AUTO_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
