--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -660,7 +660,7 @@ merchant.withdrawAutoDelay=Delay
 merchant.withdrawAutoDelaySecond=second(s)
 merchant.withdrawAutoDelayMinute=minute(s)
 merchant.withdrawAutoDelayHour=hour(s)
-merchant.withdrawAutoThreshold=Threshold for Auto-withdrawal (amount)
+merchant.withdrawAutoThreshold=To be confirmed if more
 merchant.withdrawAutoThresholdExt=Confirmation needed if amount more than
 merchants.withdrawNotification.WAITING_MANUAL_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
 merchants.withdrawNotification.WAITING_AUTO_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
