--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -671,7 +671,7 @@ admin.commissions.operationType=Operation type
 admin.commissions.value=Value, %
 admin.stockExchangeCommissions=Stock exchange commissions
 admin.merchantsCommissions=Merchant commissions
-admin.merchantAccess=Access to merchants
+admin.merchantAccess=Merchant settings
 admin.toggleBlockPrompt=Are you sure you want to change access to this merchant?
 merchant.operationNotAvailable=Unfortunately, the operation is not available at the moment
 admin.blockAllPrompt=Are you sure you want to change access to all merchants?
@@ -844,7 +844,7 @@ merchant.withdrawAutoDelay=Delay
 merchant.withdrawAutoDelaySecond=second(s)
 merchant.withdrawAutoDelayMinute=minute(s)
 merchant.withdrawAutoDelayHour=hour(s)
-merchant.withdrawAutoThreshold=Threshold for Auto-withdrawal (amount)
+merchant.withdrawAutoThreshold=To be confirmed if more
 merchant.withdrawAutoThresholdExt=Confirmation needed if amount more than
 merchants.withdrawNotification.WAITING_MANUAL_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
 merchants.withdrawNotification.WAITING_AUTO_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed {2}
