add backing up, send to multiple recipients

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -979,3 +979,4 @@ btcWallet.password.prompt=Please enter wallet password:
 btcWallet.payment.dialog.title=Send BTC
 btcWallet.payment.prompt=You are going to pay __amount__ BTC to address __address__
 btcWallet.successResult=Payment succeeded! Transaction ID {0}
+admin.reset=Reset
