--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -964,3 +964,4 @@ btcWallet.password.prompt=Пожалуйста, введите пароль ко
 btcWallet.payment.dialog.title=Отправить BTC
 btcWallet.payment.prompt=Вы собираетесь оплатить __amount__ BTC на адрес __address__
 btcWallet.successResult=Платёж совершён успешно! ID транзакции {0}
+admin.reset=Сброс
