add authority for btc wallet access

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -952,3 +952,4 @@ btcWallet.payment.dialog.title=Send BTC
 btcWallet.payment.prompt=You are going to pay __amount__ BTC to address __address__
 btcWallet.successResult=Payment succeeded! Transaction ID {0}
 admin.reset=Reset
+adminAuthority.MANAGE_BTC_CORE_WALLET=Bitcoin Core wallet management
