--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -965,3 +965,4 @@ btcWallet.payment.dialog.title=Отправить BTC
 btcWallet.payment.prompt=Вы собираетесь оплатить __amount__ BTC на адрес __address__
 btcWallet.successResult=Платёж совершён успешно! ID транзакции {0}
 admin.reset=Сброс
+adminAuthority.MANAGE_BTC_CORE_WALLET=Управление кошельком Bitcoin
