add settings interface for change params

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1012,3 +1012,13 @@ withdrawal.phrases.decline.1 = Some reason 1
 withdrawal.phrases.decline.2 = Some reason 2
 withdrawal.phrases.decline.3 = Some reason 3
 admin.reset=Reset
+session.settings=Session settings
+session.time.minutes=Session time, minutes
+button.update=Update
+session.AccountingOfsessionTime=Accounting of session time
+session.settings.invalid=Session settings is invalid
+session.FIXED_LIFETIME=Fixed time
+session.INACTIVE_COUNT_LIFETIME=Inactive time
+session.settings.time.invalid=Session time invalid
+session.time.from{0}To{1}Minutes=From {0} to {1} minutes
+session.settings.success.relogin=Update success, please re-login for changes take effect
