--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -996,3 +996,13 @@ withdrawal.phrases.decline.1 = Причина 1
 withdrawal.phrases.decline.2 = Причина 2
 withdrawal.phrases.decline.3 = причина 3
 admin.reset=Сброс
+session.settings=Настройки сессии
+session.time.minutes=Время сессии, минут
+button.update=Обновить
+session.AccountingOfsessionTime=Рассчет времени сессии
+session.settings.invalid=Неправильные навстройки сессии
+session.FIXED_LIFETIME=Фиксированное время
+session.INACTIVE_COUNT_LIFETIME=Время без активности
+session.settings.time.invalid=Время сессии некорректное
+session.time.from{0}To{1}Minutes=От {0} до {1} минут
+session.settings.success.relogin=Параметры обновлены, войдите в аккаунт заново чтобы изменения вступили в силу
