--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1197,3 +1197,4 @@ withdrawal.posted.title=Withdrawal is posted
 withdrawal.phrases.decline.1 = The EDC purse name is incorrect. When creating an order, specify the name of your wallet
 withdrawal.phrases.decline.2 = Some reason 2
 withdrawal.phrases.decline.3 = Some reason 3
+userwallets.includeEmpty=Including empty entries
