--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -997,3 +997,4 @@ withdrawal.phrases.decline.2 = Причина 2
 withdrawal.phrases.decline.3 = причина 3
 admin.reset=Сброс
 adminAuthority.MANAGE_BTC_CORE_WALLET=Управление кошельком Bitcoin
+userwallets.includeEmpty=Включая пустые записи
