--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1013,3 +1013,4 @@ withdrawal.phrases.decline.2 = Some reason 2
 withdrawal.phrases.decline.3 = Some reason 3
 admin.reset=Reset
 adminAuthority.MANAGE_BTC_CORE_WALLET=Bitcoin Core wallet management
+userwallets.includeEmpty=Including empty entries
